# cpp_exercises

./: CMakeLists.txt
biggest_result/: biggest_result.cpp  biggest_result.h
doublebasepalindromes/: DoubleBasePalindromes.cpp  DoubleBasePalindromes.h
exercises/: cezar.cpp  cezar.h  changeFormat.cpp  changeFormat.h  multiplication_table.cpp  multiplication_table.h  polybus.cpp  polybus.h
imaginary/: Imaginary.cpp  Imaginary.h
kolko_i_krzyzyk/: kolko_krzyzyk.cpp  kolko_krzyzyk.h
wisielec/: wisielec.cpp  wisielec.h
